--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -8,7 +8,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="EXPORT/*, export_presets.cfg"
+exclude_filter="EXPORT/*, Other/*, export_presets.cfg"
 export_path="EXPORT/Test.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
