--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="EXPORT/*, Other/*, export_presets.cfg"
-export_path="EXPORT/Test.exe"
+export_path="EXPORT/Desktop Utilities.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -20,8 +20,8 @@ script_export_mode=2
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release="C:/Users/liamo/Godot Projects/desktop-utilities/EXPORT/godot.windows.template_release.x86_64.exe"
+custom_template/debug="C:/Users/liamo/Godot Projects/desktop-utilities/src/EXPORT/godot.windows.template_release.x86_64.exe"
+custom_template/release="C:/Users/liamo/Godot Projects/desktop-utilities/src/EXPORT/godot.windows.template_release.x86_64.exe"
 debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
